k8s/talos/apps/ollama/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
  labels:
    app: ollama
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: topology.kubernetes.io/zone
                    operator: In
                    values:
                      - hyper3
      containers:
        - name: ollama
          image: ollama/ollama:0.34.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: models
              mountPath: /root/.ollama
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: "4"
              memory: 8Gi
          readinessProbe:
            tcpSocket:
              port: 11434
            periodSeconds: 15
          livenessProbe:
            tcpSocket:
              port: 11434
            periodSeconds: 20
            failureThreshold: 3
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: models-pvc
